David Coppefield problem: z-index issue on form submit button

--- a/static/admin/novius-os/css/novius-os.scss
+++ b/static/admin/novius-os/css/novius-os.scss
@@ -139,7 +139,7 @@ input.ui-state-disabled {
 }
 
 .mceExternalToolbar {
-	z-index:100;
+	z-index: 1100;
 }
 
 .title, .ui-widget .ui-widget.title {
